--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
