--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "version": "2.1.5",
   "description": "Proyecto de Arquitectura",
   "author": "Enderson Vizcaino, Christian Rodriguez",
-  "homepage": "http://coreui.io",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
-  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "test:e2e": "vue-cli-service test:e2e",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
@@ -35,6 +29,7 @@
     "simple-line-icons": "^2.4.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-i18n": "^8.0.0",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
@@ -42,6 +37,7 @@
     "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-e2e-nightwatch": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
@@ -54,6 +50,7 @@
     "https-proxy-agent": "^2.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
@@ -61,8 +58,15 @@
     "last 2 versions",
     "not ie <= 9"
   ],
+  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
   "engines": {
     "node": ">= 8.10.x",
     "npm": ">= 5.6.0"
+  },
+  "homepage": "http://coreui.io",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:coreui/coreui-free-vue-admin-template.git"
   }
 }
