--- a/package.json
+++ b/package.json
@@ -25,16 +25,18 @@
     "css-vars-ponyfill": "^2.0.2",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "js-cookie": "^2.2.1",
     "perfect-scrollbar": "^1.4.0",
     "simple-line-icons": "^2.4.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-flag-icon": "^1.0.6",
     "vue-i18n": "^8.0.0",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
-    "vuex-persist": "^2.1.1"
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
