--- a/package.json
+++ b/package.json
@@ -22,18 +22,22 @@
     "bootstrap-vue": "2.0.0-rc.24",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.9",
+    "css-loader": "^3.2.0",
     "css-vars-ponyfill": "^2.0.2",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
     "perfect-scrollbar": "^1.4.0",
     "simple-line-icons": "^2.4.1",
+    "style-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-flag-icon": "^1.0.6",
     "vue-i18n": "^8.0.0",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.6",
+    "vue-star-rating": "^1.6.1",
+    "vue-swal": "^1.0.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.7.0"
