--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.1",
+    "jwt-js-decode": "^1.4.1",
     "perfect-scrollbar": "^1.4.0",
     "simple-line-icons": "^2.4.1",
     "style-loader": "^1.0.0",
