--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue-router": "^3.0.6",
     "vue-star-rating": "^1.6.1",
     "vue-swal": "^1.0.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-persistedstate": "^2.7.0"
