--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "style-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-fixed-header": "^3.2.11",
     "vue-flag-icon": "^1.0.6",
     "vue-i18n": "^8.0.0",
     "vue-multiselect": "^2.1.6",
